--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
