--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "dotenv": "~4.0.0",
@@ -19,6 +21,7 @@
     "hbs": "~4.0.1",
     "mongoose": "~4.13.4",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
     "serve-favicon": "~2.4.5",
