--- a/Server/package.json
+++ b/Server/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.3.1",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5",
     "xlsx": "^0.13.3"
   },
